# casys-rpg

./: .coverage  .env.example  .gitignore  .windsurfrules  12_update_rules_index_only_feeback_sections.ipynb  1_process_feedback.ipynb  2_process_rule_and_update_index.ipynb  FUNDING.yml  LICENSE  README.md  api.py  app.py  config.md  event_bus.py  extract_images.ipynb  extract_metadata.ipynb  extract_sections.ipynb  freeze-requirements.txt  game_logic.py  logging_config.py  main.py  mkdocs.yml  package-lock.json  package.json  prepare_lore.ipynb  pyproject.toml  pytest.ini  readme  requirements.txt  run.py  setup.py
.github/: FUNDING.yml
agents/: __init__.py  base_agent.py  decision_agent.py  models.py  narrator_agent.py  protocols.py  rules_agent.py  story_graph.py  trace_agent.py
api/: app.py  socketio.py
config/: agent_config.py  component_config.py  constants.py  core_config.py  game_config.py  game_constants.py  logging_config.py  logging_filters.py  paths_config.py  storage_config.py
data/: decision_examples.jsonl
docs/: CODE_OF_CONDUCT.md  changelog.md  contributing.md  index.md  license.md
factories/: __init__.py  game_factory.py
frontend/: package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
managers/: __init__.py  agent_manager.py  author_manager.py  cache_manager.py  character_manager.py  decision_manager.py  dependencies.py  filesystem_adapter.py  game_managers.py  narrator_manager.py  rules_manager.py  state_manager.py  stats_manager.py  trace_manager.py  workflow_manager.py
models/: __init__.py  agent_config_model.py  character_model.py  common.py  config_models.py  decision_model.py  errors_model.py  feedback_model.py  game_init_model.py  game_state.py  metadata_model.py  narrator_model.py  rules_model.py  trace_model.py
protocols/: __init__.py  workflow_protocol.py
qwik_app/: tailwind.config.js
site/: 404.html  index.html
static/: index.html  script.js  socketio.html  style.css
tests/: TESTS.md  conftest.py  (+16 more)
(+1191 files in other folders)
