[tool.poetry]
name = "casys-rpg"
version = "0.1.0"
description = "Un système de jeu de rôle basé sur des agents IA"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "2.10.4"
pytest = "8.3.4"
pytest-asyncio = "0.25.0"
langchain = "0.3.13"
langchain-core = "0.3.28"
langgraph = "0.2.60"
fastapi = "0.115.6"
uvicorn = "0.34.0"
loguru = "0.7.3"
mkdocs = "1.6.1"
mkdocs-material = {extras = ["imaging"], version = "9.5.49"}
mkdocs-git-revision-date-localized-plugin = "1.3.0"
mkdocs-minify-plugin = "0.8.0"
openai = "1.58.1"
websockets = "12.0"
numpy = "2.2.1"
langsmith = "0.2.4"
tenacity = "9.0.0"
packaging = "24.2"
libsass = "0.23.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pydantic]
use_pydantic_v2 = true
warn_deprecated = false
